# pump-swap-ingestor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
exports/: trades_dump.csv
migrations/: 001_trades.sql
src/: db.rs  idl.rs  lib.rs  main.rs  pool.rs  trades.rs  wss_ingestor.rs
